--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,11 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        >
-
+        android:supportsRtl="true">
         <service
-            android:name="com.wubydax.gearreboot.GearRebootService"
+            android:name=".GearRebootDialogService"
             android:enabled="true"
-            android:exported="true"
-            >
+            android:exported="true">
         </service>
     </application>
 
